--- a/stats.html
+++ b/stats.html
@@ -49,7 +49,7 @@
 <body>
     <div class="container">
         <h1>熟識度統計</h1>
-        < milliliters id="stats" class="stats-grid"></div>
+        <div id="stats" class="stats-grid"></div>
         <a href="quiz.html" class="nav-link">返回測驗</a>
     </div>
     <script src="stats.js"></script>
